# django-postgres-dropdb.py

./: README.md  setup.cfg  setup.py
django_postgres_dropdb/: __main__.py  apps.py
django_postgres_dropdb/management/commands/: dropdb.py
