# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-postgres-dropdb
version = 2019.6.28
url = https://github.com/looking-for-a-job/django-postgres-dropdb.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django postgres dropdb

[options]
install_requires = 
	Django>1.0
	setuptools
packages = 
	django_postgres_dropdb
	django_postgres_dropdb.management
	django_postgres_dropdb.management.commands
